--- a/user/templates/main.html
+++ b/user/templates/main.html
@@ -15,7 +15,7 @@
     <script src="{% static 'js/sweetalert-dev.js' %}"></script>
     <script src="{% static 'js/bootstrap-table.min.js' %}"></script>
     <script src="{% static 'js/bootstrap-table-zh-CN.min.js' %}"></script>
-    <script src="{% static 'js/api.js' %}"></script>
+    <script src="{% static 'api.js' %}"></script>
     <style>
         .danger {
             color: red;
