--- a/user/templates/main.html
+++ b/user/templates/main.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
     <link rel="stylesheet" href="{% static 'css/sweetalert.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap-table.min.css' %">
+    <link rel="stylesheet" href="{% static 'css/bootstrap-table.min.css'%}">
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/sweetalert-dev.js' %}"></script>
     <script src="{% static 'js/bootstrap-table.min.js' %}"></script>
     <script src="{% static 'js/bootstrap-table-zh-CN.min.js' %}"></script>
-    <script src="{% static 'api.js' %}"></script>
+    <script src="{% static 'js/api.js' %}"></script>
     <style>
         .danger {
             color: red;
